--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "express": "^4.16.4",
     "graphql": "^14.2.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.4.21"
+    "mongoose": "^5.4.21",
+    "validator": "^10.11.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0-rc.1",
