feat: Add mongodb-connection

--- a/.env
+++ b/.env
@@ -1,3 +1,9 @@
 
 PORT=4000
 JWT_SECRET=lkjh23jkl5h2jkheuf2h
+
+# MongoDB
+DBURI=ds163850.mlab.com:63850
+DBNAME=planning-poker
+DBUSER=pokermaster
+DBPASSWORD=iznTYsEv6D5I3MUVMV
