Add mocha and chai tests

--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
 
 PORT=4000
 JWT_SECRET=lkjh23jkl5h2jkheuf2h
-
+# Only for production
+API_URL=
 # MongoDB
 DBURI=ds163850.mlab.com:63850
 DBNAME=planning-poker
