--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cors": "^2.8.5",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "faker": "^4.1.0",
     "graphql": "^14.2.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.4.21",
