--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@babel/runtime": "^7.4.3",
     "apollo-server-express": "^2.4.8",
     "axios": "^0.18.0",
+    "babel-cli": "^6.26.0",
     "bcrypt": "^3.0.5",
     "cors": "^2.8.5",
     "dotenv": "^7.0.0",
