--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "express": "^4.16.4",
     "faker": "^4.1.0",
     "graphql": "^14.2.1",
+    "graphql-subscriptions": "^1.1.0",
     "jsonwebtoken": "^8.5.1",
+    "merge-graphql-schemas": "^1.5.8",
     "mongoose": "^5.4.21",
     "validator": "^10.11.0"
   },
@@ -31,9 +33,9 @@
     "@babel/cli": "^7.0.0-rc.1",
     "@babel/core": "^7.0.0-rc.1",
     "@babel/node": "^7.0.0-rc.1",
-    "@babel/preset-env": "^7.0.0-rc.1",
     "@babel/plugin-proposal-class-properties": "^7.4.0",
     "@babel/plugin-transform-runtime": "^7.4.3",
+    "@babel/preset-env": "^7.0.0-rc.1",
     "chai": "^4.2.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
